# nanoclawbot-evolution-

./: .env.example  .gitignore  AUDIT.md  IMPLEMENTATION.md  README.md  SLICE_COMPLETION_REPORT.md  TODO.md  auditV2.md  auditV3.md  auditV4.md  fullcomplyTODO.md  main.py  main.py.md  master-audit.md  masteraudit.md  mastertodo.md  openrouter_test.py  openrouter_test.py.md  pyproject.toml  pyproject.toml.md  requirements.txt  todo-fix.md  todo-fixV3.md  todo-fixV4.md
data/: dashboard_events.jsonl  dashboard_state.json
infrastructure/: __init__.py  __init__.py.md  observability.py  observability.py.md  security.py  security.py.md
master_core/: __init__.py  __init__.py.md  dashboard_connector.py  dashboard_connector.py.md  global_state.py  global_state.py.md  master_chat.py  master_chat.py.md  master_core.py  master_core.py.md  resource_allocator.py  resource_allocator.py.md
master_dashboard/: 06_plugins.py  06_plugins.py.md  app.py  app.py.md
plugins/: __init__.py  __init__.py.md  plugin_base.py  plugin_base.py.md
providers/: __init__.py  __init__.py.md  litellm_gateway.py  litellm_gateway.py.md  openrouter_gateway.py  openrouter_gateway.py.md
slices/: __init__.py  __init__.py.md  slice_base.py  slice_base.py.md
slices/slice_agent_core/: __init__.py  pyproject.toml  slice.py
slices/slice_agent_core/core/: __init__.py  models.py  services.py
slices/slice_agent_core/database/: __init__.py  db_manager.py  schema.sql
slices/slice_agent_core/ui/: __init__.py
slices/slice_agent_core/ui/pages/: __init__.py  analytics.py  config.py  dashboard.py
(+126 files in other folders)
